[package]
name = "rivven-connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Connector SDK and runtime for Rivven - sources, sinks, and transforms"
readme = "README.md"

[package.metadata.cargo-machete]
# arrow-json: Used by parquet feature
# prost: Re-exported via prost-reflect for protobuf schema support
# testcontainers/testcontainers-modules/tokio-test: Dev dependencies for integration tests
ignored = ["arrow-json", "prost", "testcontainers", "testcontainers-modules", "tokio-test"]

[lib]
name = "rivven_connect"
path = "src/lib.rs"

[[bin]]
name = "rivven-connect"
path = "src/main.rs"

[features]
default = ["postgres", "mysql"]
postgres = ["rivven-cdc/postgres", "tokio-postgres"]
mysql = ["rivven-cdc/mysql"]
sqlserver = ["rivven-cdc/sqlserver"]
tls = ["rivven-client/tls"]
http = ["dep:sha2", "dep:rand", "dep:hmac"]  # HTTP connector with signing support

# RDBC connectors (query-based source/sink using rivven-rdbc)
rdbc = ["dep:rivven-rdbc"]
rdbc-postgres = ["rdbc", "rivven-rdbc/postgres"]
rdbc-mysql = ["rdbc", "rivven-rdbc/mysql"]
rdbc-sqlserver = ["rdbc", "rivven-rdbc/sqlserver"]
rdbc-full = ["rdbc-postgres", "rdbc-mysql", "rdbc-sqlserver"]

# Queue connectors (message queues)
kafka = ["dep:rskafka"]      # Kafka source/sink (pure Rust client)
mqtt = ["dep:rumqttc"]       # MQTT source (pure Rust client)
sqs = ["dep:aws-sdk-sqs", "dep:aws-config"]  # AWS SQS source (real AWS SDK)
pubsub = []     # Google Pub/Sub source

# Storage connectors - unified via object_store crate
cloud-storage = ["dep:object_store"]
s3 = ["cloud-storage", "object_store/aws"]
gcs = ["cloud-storage", "object_store/gcp"]
azure = ["cloud-storage", "object_store/azure"]
parquet = ["dep:parquet", "dep:arrow", "dep:arrow-array", "dep:arrow-schema", "dep:arrow-json"]

# Warehouse connectors (data warehouse sinks)
snowflake = ["dep:jsonwebtoken", "dep:rsa", "dep:sha2", "dep:rand", "dep:metrics"]
bigquery = ["dep:gcp-bigquery-client"]
redshift = ["dep:rustls", "dep:webpki-roots", "dep:tokio-postgres-rustls"]

# Lakehouse connectors (open table formats)
iceberg = ["parquet", "dep:iceberg", "dep:iceberg-catalog-rest"]

# Feature bundles
queue-full = ["kafka", "mqtt", "sqs", "pubsub"]
storage-full = ["s3", "gcs", "azure", "parquet"]
warehouse-full = ["snowflake", "bigquery", "redshift"]
lakehouse-full = ["iceberg"]
full = ["postgres", "mysql", "sqlserver", "tls", "http", "rdbc-full", "queue-full", "storage-full", "warehouse-full", "lakehouse-full"]

[dependencies]
# Internal crates
rivven-cdc = { workspace = true }
rivven-core = { workspace = true }
rivven-client = { workspace = true }
rivven-schema = { workspace = true, features = ["types"] }  # Types only - codecs are in format/
rivven-rdbc = { workspace = true, optional = true }

# Async
tokio = { workspace = true }
tokio-stream = "0.1"
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
async-stream = "0.3"
bytes = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
tokio-postgres = { version = "0.7", optional = true }
reqwest = { workspace = true }
metrics = { workspace = true, optional = true }

# SDK dependencies (merged from rivven-connect-sdk)
schemars = "0.8"
validator = { version = "0.20", features = ["derive"] }
uuid = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
parking_lot = "0.12"

# Derive macros for connector development
rivven-connect-derive = { workspace = true }

# Schema registry and plugin support
base64 = "0.22"
urlencoding = "2.1"

# Native Avro support
apache-avro = { workspace = true }
md5 = "0.7"
hex = "0.4"

# Native Protobuf support
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.15"

# Compression (for storage connectors)
flate2 = "1"
zstd = "0.13"
snap = "1.1"
lz4 = "1.24"

# Unified object storage (optional - replaces individual cloud SDKs)
object_store = { version = "0.11", optional = true }

# AWS SDK (optional - for SQS, Redshift only; S3 uses object_store)
aws-sdk-sqs = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
# Note: aws-sdk-redshift and aws-credential-types are reserved for future IAM auth
# Current Redshift impl uses PostgreSQL wire protocol with password auth

# Google Cloud (optional - for BigQuery, Pub/Sub only; GCS uses object_store)
gcp-bigquery-client = { version = "0.25", optional = true }

# Apache Parquet - use version 57 to match iceberg crate's internal dependencies
parquet = { version = "57", optional = true }
arrow = { version = "57", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
arrow-json = { version = "57", optional = true }

# Apache Iceberg (optional)
iceberg = { version = "0.8", optional = true }
iceberg-catalog-rest = { version = "0.8", optional = true }

# Apache Kafka (pure Rust client - optional)
rskafka = { version = "0.5", optional = true }

# MQTT client (pure Rust - optional)
rumqttc = { version = "0.24", optional = true }

# Snowflake (optional)
jsonwebtoken = { version = "9", optional = true }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { workspace = true, optional = true }

# HTTP webhook signing (optional)
hmac = { version = "0.12", optional = true }

# Redshift TLS (optional)
rustls = { workspace = true, optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
static_assertions = "1.1"
# Note: rivvend is NOT a dev-dependency to avoid circular publish issues
# Integration tests that need rivvend should be in a separate workspace crate
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-postgres = "0.7"
