[package]
name = "rivven-connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Connector SDK and runtime for Rivven - sources, sinks, and transforms"
readme = "README.md"

[package.metadata.cargo-machete]
# arrow-json: Used by parquet feature
# prost: Re-exported via prost-reflect for protobuf schema support
# testcontainers/testcontainers-modules/tokio-test: Dev dependencies for integration tests
ignored = ["arrow-json", "prost", "testcontainers", "testcontainers-modules", "tokio-test"]

[lib]
name = "rivven_connect"
path = "src/lib.rs"

[[bin]]
name = "rivven-connect"
path = "src/main.rs"

[features]
default = ["full"]
postgres = ["rivven-cdc/postgres", "tokio-postgres"]
mysql = ["rivven-cdc/mysql"]
sqlserver = ["rivven-cdc/sqlserver"]
tls = ["rivven-client/tls"]
http = ["dep:sha2", "dep:rand", "dep:hmac"]  # HTTP connector with signing support

# RDBC connectors (query-based source/sink using rivven-rdbc)
rdbc = ["dep:rivven-rdbc"]
rdbc-postgres = ["rdbc", "rivven-rdbc/postgres"]
rdbc-mysql = ["rdbc", "rivven-rdbc/mysql"]
rdbc-sqlserver = ["rdbc", "rivven-rdbc/sqlserver"]
rdbc-full = ["rdbc-postgres", "rdbc-mysql", "rdbc-sqlserver"]

# Queue connectors (message queues)
kafka = ["dep:krafka"]       # Kafka source/sink (pure Rust, consumer groups, transactions)
kafka-msk = ["kafka", "krafka/aws-msk"]  # AWS MSK IAM authentication for Kafka
mqtt = ["dep:rumqttc"]       # MQTT source (pure Rust client)
sqs = ["dep:aws-sdk-sqs", "dep:aws-config"]  # AWS SQS source (real AWS SDK)
pubsub = ["dep:gcloud-pubsub", "dep:gcloud-googleapis", "dep:tokio-util"]  # Google Pub/Sub (real GCP SDK)

# Storage connectors - unified via object_store crate
cloud-storage = ["dep:object_store", "rivven-cdc/cloud-storage"]
s3 = ["cloud-storage", "object_store/aws", "rivven-cdc/s3"]
gcs = ["cloud-storage", "object_store/gcp", "rivven-cdc/gcs"]
azure = ["cloud-storage", "object_store/azure", "rivven-cdc/azure"]
parquet = ["dep:parquet", "dep:arrow", "dep:arrow-array", "dep:arrow-schema", "dep:arrow-json"]

# Warehouse connectors (data warehouse sinks)
snowflake = ["dep:jsonwebtoken", "dep:rsa", "dep:sha2", "dep:rand", "dep:metrics"]
bigquery = ["dep:gcp-bigquery-client"]
redshift = ["dep:rustls", "dep:webpki-roots", "dep:tokio-postgres-rustls"]
databricks = ["dep:databricks-zerobus-ingest-sdk", "dep:metrics"]
clickhouse = ["dep:clickhouse", "dep:metrics"]

# Vector database connectors
qdrant = ["dep:qdrant-client", "dep:metrics"]
pinecone = ["dep:tonic", "dep:metrics"]
s3-vectors = ["dep:aws-sdk-s3vectors", "dep:aws-config", "dep:aws-smithy-types", "dep:metrics"]

# LLM connectors (chat + embedding transforms)
llm-openai = ["dep:rivven-llm", "rivven-llm/openai", "dep:metrics"]
llm-bedrock = ["dep:rivven-llm", "rivven-llm/bedrock", "dep:metrics"]
llm-full = ["llm-openai", "llm-bedrock"]

# Lakehouse connectors (open table formats)
iceberg = ["parquet", "dep:iceberg", "dep:iceberg-catalog-rest"]
delta-lake = ["parquet", "dep:deltalake"]
delta-lake-s3 = ["delta-lake", "deltalake/s3"]
delta-lake-gcs = ["delta-lake", "deltalake/gcs"]
delta-lake-azure = ["delta-lake", "deltalake/azure"]

# Feature bundles
queue-full = ["kafka", "mqtt", "sqs", "pubsub"]
storage-full = ["s3", "gcs", "azure", "parquet"]
warehouse-full = ["snowflake", "bigquery", "redshift", "databricks", "clickhouse"]
vectordb-full = ["qdrant", "pinecone", "s3-vectors"]
llm = ["llm-full"]
lakehouse-full = ["iceberg", "delta-lake"]
full = ["postgres", "mysql", "sqlserver", "tls", "http", "rdbc-full", "queue-full", "storage-full", "warehouse-full", "vectordb-full", "llm-full", "lakehouse-full"]

[dependencies]
# Internal crates
rivven-cdc = { workspace = true }
rivven-core = { workspace = true }
rivven-client = { workspace = true }
rivven-schema = { workspace = true, features = ["types"] }  # Types only - codecs are in format/
rivven-rdbc = { workspace = true, optional = true }
rivven-llm = { workspace = true, optional = true }

# Async
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"], optional = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
async-stream = "0.3"
bytes = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
tokio-postgres = { version = "0.7", optional = true }
reqwest = { workspace = true }
metrics = { workspace = true, optional = true }

# SDK dependencies (merged from rivven-connect-sdk)
schemars = "0.8"
validator = { version = "0.20", features = ["derive"] }
uuid = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
parking_lot = "0.12"

# Derive macros for connector development
rivven-connect-derive = { workspace = true }

# Schema registry and plugin support
base64 = "0.22"
urlencoding = "2.1"

# Native Avro support
apache-avro = { workspace = true }
md5 = "0.7"
hex = "0.4"

# Native Protobuf support
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.15"

# Compression (for storage connectors)
flate2 = "1"
zstd = "0.13"
snap = "1.1"
lz4_flex = "0.11"

# Unified object storage (optional - replaces individual cloud SDKs)
object_store = { version = "0.11", optional = true }

# AWS SDK (optional - for SQS, Redshift only; S3 uses object_store)
aws-sdk-sqs = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
# Note: aws-sdk-redshift and aws-credential-types are reserved for future IAM auth
# Current Redshift impl uses PostgreSQL wire protocol with password auth

# Google Cloud (optional - for BigQuery, Pub/Sub; GCS uses object_store)
gcp-bigquery-client = { version = "0.25", optional = true }
gcloud-pubsub = { version = "1.6", default-features = false, features = ["auth", "rustls-tls", "jwt-aws-lc-rs"], optional = true }
gcloud-googleapis = { version = "1.3", features = ["pubsub"], package = "gcloud-googleapis", optional = true }

# Apache Parquet - use version 57 to match iceberg crate's internal dependencies
parquet = { version = "57", optional = true }
arrow = { version = "57", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
arrow-json = { version = "57", optional = true }

# Apache Iceberg (optional)
iceberg = { version = "0.8", optional = true }
iceberg-catalog-rest = { version = "0.8", optional = true }

# Delta Lake (optional)
deltalake = { version = "0.30", optional = true }

# Apache Kafka (pure Rust, async-native client - optional)
# Features: consumer groups, transactions, SASL, OAUTHBEARER, MSK IAM, batching, compression
krafka = { version = "0.2", optional = true }

# MQTT client (pure Rust - optional)
rumqttc = { version = "0.24", optional = true }

# Snowflake (optional)
jsonwebtoken = { version = "9", optional = true }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { workspace = true, optional = true }

# HTTP webhook signing (optional)
hmac = { version = "0.12", optional = true }

# Redshift TLS (optional)
rustls = { workspace = true, optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }

# Databricks Zerobus (optional)
databricks-zerobus-ingest-sdk = { version = "0.5", optional = true }

# ClickHouse (optional — official pure Rust client, HTTP + RowBinary)
clickhouse = { version = "0.14", features = ["inserter"], optional = true }

# Qdrant (optional — official gRPC-based vector search client)
qdrant-client = { version = "1.16", optional = true }

# gRPC (optional — Pinecone vectordb connector; uses rustls, no OpenSSL)
tonic = { version = "0.13", default-features = false, features = ["channel", "prost", "tls-ring", "tls-webpki-roots"], optional = true }

# Amazon S3 Vectors (optional — purpose-built vector storage with native similarity search)
aws-sdk-s3vectors = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
static_assertions = "1.1"
# Note: rivvend is NOT a dev-dependency to avoid circular publish issues
# Integration tests that need rivvend should be in a separate workspace crate
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-postgres = "0.7"
tempfile = "3.10"
