[package]
name = "rivven-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rivven distributed event streaming platform"

[package.metadata.cargo-machete]
# humantime-serde: Used by tls feature for certificate duration config
# oauth2/openidconnect: Used by oidc feature for OIDC authentication
ignored = ["humantime-serde", "oauth2", "openidconnect"]

[features]
default = ["compression", "cedar", "tls", "metrics", "encryption"]
compression = ["dep:lz4_flex", "dep:zstd", "dep:snap"]
cedar = ["dep:cedar-policy"]
encryption = ["dep:secrecy"]
oidc = ["dep:openidconnect", "dep:oauth2", "dep:jsonwebtoken", "dep:reqwest"]
tls = ["dep:rustls", "dep:rustls-pemfile", "dep:rustls-native-certs", "dep:tokio-rustls", "dep:rcgen", "dep:x509-parser", "dep:humantime-serde"]
metrics = ["dep:metrics-exporter-prometheus"]
# Cloud object storage backends for tiered storage
cloud-storage = ["dep:object_store"]
s3 = ["cloud-storage", "object_store/aws"]
gcs = ["cloud-storage", "object_store/gcp"]
azure = ["cloud-storage", "object_store/azure"]
all-cloud = ["s3", "gcs", "azure"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
memmap2 = "0.9"
crc32fast = "1.3"
serde_bytes = { workspace = true }
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
memchr = "2.7"
regex = "1.11"
indexmap = "2"

# Metrics - unified observability
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Authentication & Security
ring = "0.17"
sha2 = "0.10"
argon2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

# Encryption at rest
secrecy = { version = "0.10", features = ["serde"], optional = true }

# Authorization - Cedar policy engine
cedar-policy = { workspace = true, optional = true }

# OIDC/OAuth2 authentication
openidconnect = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# TLS/mTLS support
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rcgen = { version = "0.13", optional = true, features = ["aws_lc_rs"] }
x509-parser = { version = "0.16", optional = true }
humantime-serde = { version = "1.1", optional = true }

# Compression (high-performance, pure Rust)
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", features = ["zstdmt"], optional = true }
snap = { version = "1.1", optional = true }

# Cloud object storage (S3, GCS, Azure, MinIO)
object_store = { version = "0.11", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tempfile = "3"

[[bench]]
name = "performance"
harness = false

