[package]
name = "rivven-dashboard"
version = "0.0.1"
edition = "2021"
authors = ["hupe1980"]
license = "Apache-2.0"
publish = false  # WASM-only, not crates.io
repository = "https://github.com/hupe1980/rivven"
description = "Leptos-based WebAssembly dashboard for Rivven"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "HtmlMetaElement",
    "Location",
    "Window",
    "console",
] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
