[package]
name = "rivven-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false  # NOT published to crates.io - internal testing only
description = "Integration and end-to-end tests for Rivven distributed event streaming platform"

[lib]
name = "rivven_integration_tests"
path = "src/lib.rs"

# All internal crates as dependencies (can use workspace versions)
[dependencies]
# Core crates
rivven-core = { workspace = true, features = ["cedar", "tls"] }
rivven-cdc = { workspace = true, features = ["postgres", "mysql", "mariadb", "cloud-storage"] }
rivven-client = { workspace = true, features = ["tls"] }
rivven-connect = { workspace = true, features = ["rdbc-postgres", "kafka", "mqtt", "cloud-storage"] }
rivven-protocol = { workspace = true, features = ["protobuf"] }
rivven-schema = { workspace = true, features = ["server", "avro", "auth"] }
rivvend = { workspace = true, features = ["tls", "protobuf"] }

# TLS crypto provider - needed for runtime initialization
rustls = { workspace = true, features = ["aws-lc-rs"] }

# Async runtime
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Testing utilities
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "mysql", "mariadb", "kafka", "mosquitto"] }
tokio-postgres = "0.7"
mysql_async = { version = "0.34", default-features = false }

# Kafka & MQTT client libraries for integration tests
rskafka = "0.5"
rumqttc = "0.24"

# CLI parsing (for creating test CLI instances)
clap = { workspace = true }

# HTTP client for API testing
reqwest = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tempfile = "3.10"
portpicker = "0.1"
schemars = "0.8"
validator = { version = "0.20", features = ["derive"] }

# ExternalizeBlob test utilities
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["schema"]
schema = []

[[test]]
name = "e2e_pipeline"
path = "tests/e2e_pipeline.rs"

[[test]]
name = "cluster_consensus"
path = "tests/cluster_consensus.rs"

[[test]]
name = "cdc_postgres"
path = "tests/cdc_postgres.rs"

[[test]]
name = "client_protocol"
path = "tests/client_protocol.rs"

[[test]]
name = "security"
path = "tests/security.rs"

[[test]]
name = "chaos"
path = "tests/chaos.rs"

[[test]]
name = "cdc_mysql"
path = "tests/cdc_mysql.rs"

[[test]]
name = "cdc_mariadb"
path = "tests/cdc_mariadb.rs"

[[test]]
name = "schema_avro"
path = "tests/schema_avro.rs"

[[test]]
name = "stress"
path = "tests/stress.rs"

[[test]]
name = "consumer_groups"
path = "tests/consumer_groups.rs"

[[test]]
name = "connect_e2e"
path = "tests/connect_e2e.rs"

[[test]]
name = "rbac"
path = "tests/rbac.rs"

[[test]]
name = "tls"
path = "tests/tls.rs"

[[test]]
name = "observability"
path = "tests/observability.rs"

[[test]]
name = "compression"
path = "tests/compression.rs"

[[test]]
name = "tiered_storage"
path = "tests/tiered_storage.rs"

[[test]]
name = "protobuf_protocol"
path = "tests/protobuf_protocol.rs"

[[test]]
name = "rdbc_connectors"
path = "tests/rdbc_connectors.rs"

[[test]]
name = "kafka_connector"
path = "tests/kafka_connector.rs"

[[test]]
name = "mqtt_connector"
path = "tests/mqtt_connector.rs"

[[test]]
name = "externalize_blob"
path = "tests/externalize_blob.rs"
