[package]
name = "rivven-operator"
version = "0.1.0"
edition = "2021"
authors = ["Rivven Contributors"]
description = "Kubernetes operator for Rivven distributed event streaming platform"
license = "Apache-2.0"
repository = "https://github.com/hupe1980/rivven"
keywords = ["kubernetes", "operator", "streaming", "kafka", "rivven"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rivven-operator"
path = "src/main.rs"

[dependencies]
# Kubernetes client and controller runtime
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32", "schemars"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Schema generation for CRDs
schemars = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Regex for input validation
regex = "1.11"
once_cell = "1.20"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
