[package]
name = "rivven-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for deploying and managing Rivven clusters"

[[bin]]
name = "rivven-operator"
path = "src/main.rs"

[dependencies]
# Rivven client for cluster communication
rivven-client = { workspace = true }

# Kubernetes client and controller runtime
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32", "schemars"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Schema generation for CRDs
schemars = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# CLI
clap = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Regex for input validation
regex = "1.11"

# Chrono for timestamps
chrono = { workspace = true }
