[package]
name = "rivven-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol types for Rivven distributed event streaming"
keywords = ["streaming", "protocol", "event-driven"]
categories = ["network-programming"]

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
postcard = { version = "1", features = ["alloc"] }
thiserror = "1"

[features]
default = []
