[package]
name = "rivven-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol types for Rivven distributed event streaming"
keywords = ["streaming", "protocol", "event-driven"]
categories = ["network-programming"]

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
