[package]
name = "rivven-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol types for Rivven distributed event streaming"
keywords = ["streaming", "protocol", "event-driven"]
categories = ["network-programming"]

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
# Protobuf support (optional, for cross-language clients)
prost = { version = "0.13", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[features]
default = []
# Enable protobuf wire format for cross-language client support (Go, Java, etc.)
protobuf = ["dep:prost", "dep:prost-build"]
