[package]
name = "rivven-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # PyPI-only, not crates.io
description = "Python bindings for Rivven event streaming platform"
readme = "README.md"
keywords = ["kafka", "streaming", "event-driven", "python", "pyo3"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[lib]
name = "_rivven"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings (0.27+ fixes RUSTSEC-2025-0020)
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal crates
rivven-client = { workspace = true }
rivven-core = { workspace = true }

# Concurrent per-transactional-id lock map
dashmap = "6.1"

# Serialization for message conversion
bytes = { workspace = true }

# Note: TLS support uses rustls (via rivven-client/tls), no OpenSSL dependency needed
# Cross-compilation is handled by the build system without vendored OpenSSL

[dev-dependencies]
# Python testing support
pyo3 = { version = "0.27", features = ["auto-initialize"] }

[features]
default = []
# Enable TLS support
tls = ["rivven-client/tls"]
